fix(i18n): remove unnecessary text from translation strings in UI elements

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="toolbar-group">
                 <!-- CORREÇÃO: Usando DIV em vez de BUTTON para permitir dropdown dentro (HTML Válido) -->
                 <div class="btn-tool" id="btn-criar" data-action="criar" role="button" tabindex="0">
-                    <span data-i18n="btn.create">+ Criar</span>
+                    <span data-i18n="btn.create">Criar</span>
                     <div class="dropdown-criar" id="dropdown-criar">
                         <button data-tipo="player">👤 Player</button>
                         <button data-tipo="npc">🤖 NPC</button>
@@ -115,7 +115,7 @@
                 <div class="painel-hierarquia"
                     style="flex: 1; display: flex; flex-direction: column; min-height: 200px; border-bottom: 2px solid #555;">
                     <div class="painel-header">
-                        <h3><span data-i18n="panel.hierarchy">📂 Hierarquia</span></h3>
+                        <h3><span data-i18n="panel.hierarchy">Hierarquia</span></h3>
                         <button class="btn-collapse">▼</button>
                     </div>
                     <div class="hierarquia-tree" id="hierarquia-tree" style="flex: 1; overflow-y: auto; padding: 5px;">
@@ -171,7 +171,7 @@
             <!-- Painel de Propriedades (Direita) -->
             <div class="painel-propriedades">
                 <div class="painel-header">
-                    <h3><span data-i18n="panel.properties">⚙️ Propriedades</span></h3>
+                    <h3><span data-i18n="panel.properties">Propriedades</span></h3>
                     <button class="btn-collapse">▼</button>
                 </div>
                 <div class="propriedades-content" id="propriedades-content">
