fix(ui): update play button to remove text for cleaner UI

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
             <!-- Grupo: Controles de Execução -->
             <div class="toolbar-group">
 
-                <button class="btn-play" id="btn-play" title="Executar (Space)"><span data-i18n="toolbar.play">▶
-                        Play</span></button>
+                <button class="btn-play" id="btn-play" title="Executar (Space)">▶</button>
                 <button class="btn-pause hidden" id="btn-pause" title="Pausar"><span data-i18n="toolbar.pause">⏸
                         Pause</span></button>
                 <button class="btn-stop hidden" id="btn-stop" title="Parar"><span data-i18n="toolbar.stop">◼
